# androidCrypt

./: .gitignore
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pbkdf2_native.cpp  xts_aes_native.cpp
app/src/main/cpp/Crypto/: blake2s.c
app/src/main/java/com/androidcrypt/app/: CopyService.kt  MainActivity.kt  VeraCryptDocumentsProvider.kt  VolumeForegroundService.kt
app/src/main/java/com/androidcrypt/crypto/: FAT32Reader.kt  NativeCascadeSTA_XTS.kt  NativeCascadeXTS.kt  NativePkcs5.kt  NativeSerpentXTS.kt  NativeTwofishXTS.kt  NativeXTS.kt  PBKDF2.kt  VolumeCreator.kt  VolumeHeader.kt  VolumeMountManager.kt  VolumeReader.kt
app/src/test/java/com/androidcrypt/app/: CopyServiceNotificationRateLimitTest.kt  CopyServiceStateTest.kt  VeraCryptDocumentsProviderCacheTest.kt  VeraCryptDocumentsProviderIdTest.kt
app/src/test/java/com/androidcrypt/crypto/: Crc32Test.kt  CryptoUtilsTest.kt  FAT32BoundaryPropertyTest.kt  FAT32LongNameBoundaryPropertyTest.kt  FAT32OperationsTest.kt  FAT32RandomAccessReadTest.kt  FullVector1Debug.kt  HeaderRobustnessPropertyTest.kt  KeyfileEndToEndPropertyTest.kt  KeyfileIntegrationTest.kt  KeyfileMixingPropertyTest.kt  KeyfileProcessorProductionTest.kt  KeyfileProcessorTest.kt  MountFailureModesPropertyTest.kt  NativeCipherRoundTripTest.kt  NativePbkdf2Test.kt  NativePkcs5ErrorTest.kt  PBKDF2Test.kt  VeraCryptTestVectors.kt  VolumeContainerTest.kt  VolumeCreationMountTest.kt  VolumeCreatorHiddenVolumeTest.kt  VolumeCreatorValidationTest.kt  VolumeHeaderParserTest.kt  VolumeMountManagerCacheInvalidationTest.kt  VolumeMountManagerTest.kt  VolumeReaderBackupHeaderTest.kt  VolumeReaderIOTest.kt  VolumeRoundTripPerHashTest.kt  VolumeVariantsTest.kt  XTSDebug.kt  (+1 more)
veracrypt/: test_full_decrypt.c  test_mdsq  test_mdsq.c  test_mdsq_check  test_mdsq_check.c  test_mktab  test_mktab.c  test_round10  test_round10.c  test_s8_real.c  test_s8_values  test_s8_values.c  test_serpent_debug  test_serpent_debug.c  test_serpent_decrypt.c  test_serpent_decrypt_trace  test_serpent_decrypt_trace.c  test_serpent_keys.c  test_serpent_keys_simple  test_serpent_keys_simple.c  test_serpent_round  test_serpent_round.c  test_serpent_simple.kt  test_tweak.c  test_tweak.kts  test_twofish_c  test_twofish_c.c  test_twofish_debug.c  test_twofish_full  test_twofish_full.c  test_twofish_keys  test_twofish_keys.c  test_twofish_lkey  test_twofish_lkey.c  test_twofish_mktab  test_twofish_mktab.c  test_twofish_rounds  test_twofish_rounds.c  test_twofish_step  test_twofish_step.c  (+6 more)
